[gd_scene load_steps=5 format=3 uid="uid://haumh5maop7u"]

[ext_resource type="PackedScene" uid="uid://dffq05wx8r6pc" path="res://assets/nuke_gal/nuke_gal.blend" id="1_oul6g"]
[ext_resource type="Script" uid="uid://cjjd0i5rb1frw" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="PackedScene" uid="uid://6l1o68jonqra" path="res://meta/look_at_3d/look_at_3d.tscn" id="3_g1dw6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kqu6x"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_rkbax")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kqu6x")

[node name="MeshPivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="nuke_gal" parent="MeshPivot" instance=ExtResource("1_oul6g")]
transform = Transform3D(-0.41, 0, 3.584334e-08, 0, 0.41, 0, -3.584334e-08, 0, -0.41, 0, 1.4064045, 0)

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="CameraArm" type="SpringArm3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.49999997, 0.86602545, 0, -0.86602545, 0.49999997, 0, 1.4902797, 0)
spring_length = 7.0
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="CameraPivot/CameraArm"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7)

[node name="LookAt3D" parent="." node_paths=PackedStringArray("smooth_target") instance=ExtResource("3_g1dw6")]
unique_name_in_owner = true
smooth_target = NodePath("../MeshPivot")
smoothing = 10.0
